JVM参数学习，以及GC日志的解析，模拟OOM、GC、Full GC的场景